# mlcpp

./: .gitignore  CMakeLists.txt  README.md
include/mlcpp/core/: exceptions.hpp  types.hpp
include/mlcpp/supervised/: linear_regression.hpp
